{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 15,
  "lineage": "c2d6f6b7-c3d6-1c54-b6f1-973fe5107786",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382601924:internet-gateway/igw-098a3e636963f244b",
            "id": "igw-098a3e636963f244b",
            "owner_id": "992382601924",
            "tags": {
              "Name": "terraform-vpc-igw"
            },
            "tags_all": {
              "Name": "terraform-vpc-igw"
            },
            "vpc_id": "vpc-09527e2780b815ce9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "entry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-098a3e636963f244b",
            "id": "r-rtb-08e46ce5c63ce2c1e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08e46ce5c63ce2c1e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-vpc-igw",
            "aws_route_table.terraform-pub-sub-rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-pub-sub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382601924:route-table/rtb-08e46ce5c63ce2c1e",
            "id": "rtb-08e46ce5c63ce2c1e",
            "owner_id": "992382601924",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-pub-sub-rt"
            },
            "tags_all": {
              "Name": "terraform-pub-sub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09527e2780b815ce9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e695608b8a0496e",
            "route_table_id": "rtb-08e46ce5c63ce2c1e",
            "subnet_id": "subnet-08e6c44c85c60965c"
          },
          "dependencies": [
            "aws_route_table.terraform-pub-sub-rt",
            "aws_subnet.public-sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382601924:subnet/subnet-08e6c44c85c60965c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "30.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e6c44c85c60965c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382601924",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-terraform-vpc-01"
            },
            "tags_all": {
              "Name": "public-sub-terraform-vpc-01"
            },
            "vpc_id": "vpc-09527e2780b815ce9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382601924:vpc/vpc-09527e2780b815ce9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-04c1e9a3fa7e2f9da",
            "default_route_table_id": "rtb-0822767021329334b",
            "default_security_group_id": "sg-0ba9266fcb90d4a71",
            "dhcp_options_id": "dopt-02ef6d4663b96a178",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09527e2780b815ce9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0822767021329334b",
            "owner_id": "992382601924",
            "tags": {
              "Name": "fusion-terraform-vpc"
            },
            "tags_all": {
              "Name": "fusion-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}